Fix top nav spacing

--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -431,6 +431,6 @@ form textarea {
 	}
 	
 	.Android .navbar-fixed-top {
-		top: 46px;
+		top: 42px;
 	}
 }
